# kiln

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md  tsconfig.json  vite.config.js
docs/: design-system.md
docs/plans/: README.md  roadmap.md
docs/plans/tickets/: 01-sidecar-deps.md  02-kernel-lifecycle.md  03-jsonrpc-control.md  04-execute-roundtrip.md  05-experiment-vs-inspection.md  06-phase1-rpc-contract-tests.md  10-sidecar-process-supervisor.md  11-control-client.md  12-tauri-execute-command.md  13-state-events.md  20-app-shell.md  21-chat-pane.md  22-claude-client-stub.md  30-propose-experiment-schema.md  31-slot-validation.md  32-premise-gate-ui.md  33-mlflow-tag-write.md  34-results-gate-ui.md  40-arrow-server.md  41-df-handle-hook.md  42-df-explorer-viewer.md  43-summary-stats.md  50-mime-router.md  51-plot-panel.md  60-mlflow-query.md  61-comparison-view.md  62-decision-diff.md  70-repl-panel.md  71-experiment-vs-inspection-enforcement.md  72-drift-detector.md  80-pyinstaller-sidecar.md  81-tauri-action-release.md  82-cocogitto-versioning.md
sidecar/: pyproject.toml
sidecar/src/kiln_sidecar/: __init__.py  __main__.py  arrow_server.py  autolog_gate.py  checkpoint.py  df_display.py  df_pages.py  execute.py  kernel.py  mlflow_query.py  mlflow_runs.py  rpc.py
sidecar/tests/: test_arrow_server.py  test_checkpoint.py  test_deps_present.py  test_execute.py  test_kernel.py  test_mlflow_query.py  test_mlflow_runs.py  test_rpc.py  test_smoke.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: checkpoint.rs  claude.rs  commands.rs  lib.rs  main.rs  sidecar.rs  sidecar_client.rs
src-tauri/tests/: drift.rs
src/lib/: arrow-client.ts  chat-store.svelte.ts  checkpoint-store.svelte.ts  checkpoint-types.ts  df-store.svelte.ts  errors.ts  heuristics.ts  plot-store.svelte.ts  runs-store.svelte.ts  sidecar-status.svelte.ts  theme.css
src/lib/components/: AppShell.svelte  ChatPane.svelte  CodeViewPane.svelte  CompareView.svelte  DataFrameView.svelte  DecisionDiff.svelte  InspectionRepl.svelte  PlotPanel.svelte  PremiseGate.svelte  ResultsGate.svelte  ResultsPane.svelte  RunsList.svelte  SlotRow.svelte  SummaryStrip.svelte
src/routes/: +layout.svelte  +page.svelte
